<resources>
    <string name="app_name">Kyoala</string>

    <string name="action_queue">Queue</string>
    <string name="action_archives">Archives</string>
    <string name="action_settings">Settings</string>

    <string name="action_queue_list">Queue List</string>
    <string name="action_save_to_archive">Save to Archive</string>

    <string name="action_archive_delete">Delete Archives</string>
    <string name="action_archive_filter">Filter Archives</string>

    <string name="archive_details">Archive Details</string>
    <string name="queue_list">Queue List</string>
    <string name="queue_config">Queue Configuration</string>
    <string name="offline_sync">Offline Sync Testing</string>
    <string name="header_booking">Booking</string>
    <string name="header_entity">Entity</string>
    <string name="header_queue">Queue</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="apply">Apply</string>
    <string name="create_user">Create New User</string>
    <string name="configure_queue">Queue Configuration</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="industry">Industry</string>
    <string name="queue_name">Queue Name</string>
    <string name="contact_no">Contact No</string>
    <string name="min_seats">Minimum Seats</string>
    <string name="max_seats">Maximum Seats</string>
    <string name="queue_prefix">Prefix</string>
    <string name="entity_id">Id</string>
    <string name="email">Email</string>
    <string name="open_drawer">Open Menu</string>
    <string name="close_drawer">Close Menu</string>
    <string name="avatar">Avatar</string>
    <string name="upload">Upload</string>
    <string name="rational_upload_avatar">The app needs to read image from storage for upload.</string>

    <!-- dialog messages -->
    <string name="message_no_bookings">Oops, no bookings for this queue!</string>
    <string name="message_no_history">Oops, no history available!</string>
    <string name="message_clear_queue">Clear this queue?</string>
    <string name="message_booking_deleted">Booking deleted</string>
    <string name="message_booking_delete_error">Unable to delete booking</string>
    <string name="message_booking_delete_status_code">Unable to delete booking. Status code is %1$d</string>
    <string name="message_history_updated">History updated</string>
    <string name="message_history_update_error">Unable to update history</string>
    <string name="message_history_update_error_status_code">Unable to update history. Status code is %1$d</string>
    <string name="message_history_archived">Saved to archive.</string>
    <string name="message_history_archive_error">Unable to save to archive</string>
    <string name="message_history_archive_error_status_code">Unable to save to archive. Status code is %1$d</string>
    <string name="message_queue_clear_status_code">Unable to clear queue. Status code is %1$d</string>
    <string name="message_queue_clear_error">Unable to clear queue</string>
    <string name="message_load_queue_error">Error loading queues</string>
    <string name="message_invalid_booking_info">Invalid booking info</string>
    <string name="message_booking_added">Booking configured successfully</string>
    <string name="message_booking_add_status_code">Unable to configure booking. Status code is %1$d</string>
    <string name="message_booking_add_error">Unable to configure booking. Please try again</string>
    <string name="message_entity_load_status_code">Unable to load entity. Status code is %1$d</string>
    <string name="message_entity_create">Creating entity for %1$s</string>
    <string name="message_queue_load_status_code">Unable to load queue. Status code is %1$d</string>
    <string name="message_entity_load_error">Unable to load entity</string>
    <string name="message_queue_load_error">Unable to load queues</string>
    <string name="message_queue_delete_error">Unable to delete queue</string>
    <string name="message_queue_delete_status_code">Unable to delete queue. Status code is %1$d</string>
    <string name="message_queue_deleted">Queue deleted</string>
    <string name="message_email_verification">An email verification is sent to you. Please follow the link in the email to verify your email address.</string>
    <string name="message_queue_configured">Queue configured successfully</string>
    <string name="message_queue_configure_status_code">Unable to configure queue. Status code is %1$d</string>
    <string name="message_queue_configure_error">Unable to configure queue. Please try again</string>
    <string name="message_entity_configured">Entity configured successfully</string>
    <string name="message_entity_configure_status_code">Unable to configure entity. Status code is %1$d</string>
    <string name="message_entity_configure_error">Unable to configure entity. Please try again</string>
    <string name="message_configure_queue">You are one step away. Configure a queue now...</string>
    <string name="message_archive_summary_na">No archives available</string>
    <string name="message_no_photo_chosen">No photo chosen</string>
    <string name="message_uploading">Uploading...</string>
    <string name="message_upload_success">Image uploaded.</string>
    <string name="message_upload_failed">Image upload failed.</string>
    <string name="message_industry_load_error">Unable to load industry</string>
    <string name="message_industry_load_status_code">Unable to load industry. Status code is %1$d</string>
    <string name="message_load_archives_error">Error loading archives</string>

</resources>
