<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/header_entity" />

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/avatar"
        android:scaleType="centerCrop"
        android:visibility="visible"
        tools:visibility="visible" />


    <Button
        android:id="@+id/button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/upload"
        android:layout_gravity="center_horizontal"
        android:theme="@style/ThemeOverlay.ApplyButton" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_entity_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/edit_entity_id"
            android:layout_toEndOf="@+id/edit_entity_id"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/entity_id" />

        <EditText
            android:id="@+id/edit_entity_id"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_entity_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/edit_entity_email"
            android:layout_toEndOf="@+id/edit_entity_email"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edit_entity_email"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_entity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/edit_entity_name"
            android:layout_toEndOf="@+id/edit_entity_name"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/name" />

        <EditText
            android:id="@+id/edit_entity_name"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:inputType="none"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_entity_industry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/spinner_entity_industry"
            android:layout_toEndOf="@+id/spinner_entity_industry"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/industry" />

        <Spinner
            android:id="@+id/spinner_entity_industry"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end" />

    </RelativeLayout>



    <!-- Cancel and apply buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"
            android:theme="@style/ThemeOverlay.ApplyButton" />
    </LinearLayout>

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/header_queue" />

    <!-- Cancel and apply buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_configure_queue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/configure_queue"
            android:theme="@style/ThemeOverlay.ApplyButton" />
    </LinearLayout>

</LinearLayout>
