<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/queue_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/header_queue" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_queue_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="start"
            android:maxLines="1"
            android:layout_toRightOf="@+id/edit_queue_name"
            android:layout_toEndOf="@+id/edit_queue_name"
            android:text="@string/queue_name" />

        <EditText
            android:id="@+id/edit_queue_name"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:text="" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_queue_min_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="start"
            android:maxLines="1"
            android:layout_toRightOf="@+id/edit_queue_min_capacity"
            android:layout_toEndOf="@+id/edit_queue_min_capacity"
            android:text="@string/min_seats" />

        <EditText
            android:id="@+id/edit_queue_min_capacity"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:inputType="number"
            android:singleLine="true"
            android:text="1" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_queue_max_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="start"
            android:maxLines="1"
            android:layout_toRightOf="@+id/edit_queue_max_capacity"
            android:layout_toEndOf="@+id/edit_queue_max_capacity"
            android:text="@string/max_seats" />

        <EditText
            android:id="@+id/edit_queue_max_capacity"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:inputType="number"
            android:singleLine="true"
            android:text="1" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_queue_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="start"
            android:maxLines="1"
            android:layout_toRightOf="@+id/edit_queue_prefix"
            android:layout_toEndOf="@+id/edit_queue_prefix"
            android:text="@string/queue_prefix" />

        <EditText
            android:id="@+id/edit_queue_prefix"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:text="" />

    </RelativeLayout>


    <!-- Cancel and apply buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/greySecondary"
            android:theme="@style/ThemeOverlay.ApplyButton" />


        <Button
            android:id="@+id/button_apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"
            android:theme="@style/ThemeOverlay.ApplyButton" />

    </LinearLayout>


</LinearLayout>

